--- a/index.html
+++ b/index.html
@@ -1,85 +1,333 @@
-<html>
+<!---Codigo creado con @A.N.A
+Recomendaciones para un buen SEO. 
+
+Ctrl + Shift + K -- borrar una linea completa.-->
+
+<!DOCTYPE html>
+<html lang="es">
+
 <head>
-  <title>Proyecto Mirqu</title>
+    <meta charset="UTF-8">
+
+    <meta name="description" content="Curso gratuito para construir tu propio nano-satélite educativo. 
+        Aprende física espacial, electrónica y programación con materiales económicos.">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
+
+    <title>Construye tu propio satélite | Curso gratuito | Mirqu </title>
 </head>
+
 <body>
 
-<left>
-<div style="display:flex;position:fixed;border-bottom:1px solid black;width:100%;background:white;margin:0;padding:5px;top:0;">
-<img src="img/Mirqu.png" style="width:70px;height:70px;display:inline-block;"/>&nbsp;&nbsp;<h3>Proyecto Mirqu</h3>
-</div>
-</left>
-  
-<br><br><br><br><br>
-El proyecto Mirqu tiene como objetivo reducir las barreras de entrada para la participación en actividades espaciales desde el ámbito académico,
-promoviendo la formación de capacidades en ingeniería espacial a través del desarrollo de prototipos funcionales de CubeSat en tierra. <br>
+    <nav class="main-nav" id="main-nav" aria-label="Menú principal">
+        <a class="nav-toggle" aria-label="Abrir menú">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <ul class="nav-list">
+            <li class="nav-item">Explorar
+                <ul class="submenu">
+                    <li>Construir paso a paso</li>
+                    <li>Articulos</li>
+                    <li>Conceptos Clave</li>
+                    <li>Recursos y enlaces</li>
+                </ul>
+            </li>
+            <li class="nav-item">Participa
+                <ul class="submenu">
+                    <li>¿Eres docente? Usalo en clase</li>
+                    <li>Comparte tu version</li>
+                    <li>Quiero colaborar</li>
+                    <li>Sugerencias</li>
+                    <li>Reportar un problema</li>
+                    <li>Apoyanos :3 </li>
+                </ul>
+            </li>
+            <li class="nav-item">Lenguaje
+                <ul class="submenu">
+                    <li>Español</li>
+                    <li>Quechua Chanka</li>
+                    <li>Quechua Ancashino</li>
+                    <li>Quechua Amazonas</li>
+                    <li>Quechua Cusco</li>
+                    <li>Aymara</li>
+                    <li>Ahshaninka</li>
+                    <li>English</li>
+                    <li>Portugues</li>
+                </ul>
+            </li>
+            <li class="nav-item">Conocenos
+                <ul class="submenu">
+                    <li>Nuestro Objetivo</li>
+                    <li>Nuestro equipo</li>
+                    <li>Tecnologia usada</li>
+                    <li>Valores del proyecto</li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
 
-Este enfoque busca facilitar el aprendizaje práctico y teórico mediante la simulación de subsistemas 
-reales de un satélite tipo CubeSat, empleando componentes de bajo costo y tecnologías accesibles.<br>
+    <main>
 
-La propuesta está orientada a proporcionar una base comprensible, replicable y aplicable para estudiantes, docentes e investigadores que deseen 
-iniciarse en el diseño, construcción y operación de sistemas espaciales. Los prototipos desarrollados no solo representarán una herramienta 
-pedagógica valiosa, sino también un punto de partida sobre el cual futuras investigaciones puedan construir soluciones más avanzadas 
-o ser validadas en contextos más exigentes.<br>
-
-Cada subsistema del CubeSat (como energía, comunicación, control de misión y carga útil) será documentado detalladamente, con el fin de
-que los procedimientos puedan ser reproducidos con facilidad y utilizados como guía en entornos educativos o de investigación.<br>
-
-El proyecto Mirqu no solo se orienta a la construcción de un prototipo funcional de CubeSat en tierra, sino también a proporcionar una
-formación sólida y accesible en torno a los principales aspectos de la ingeniería espacial, especialmente en el ámbito de los CubeSats.<br>
-
-Esta iniciativa busca democratizar el conocimiento espacial, facilitando el acceso a contenidos técnicos mediante el uso de tecnologías 
-de bajo costo, con el objetivo de construir capacidades sostenibles desde el entorno académico.<br>
-Se espera que los participantes y usuarios del prototipo adquieran conocimientos fundamentales en:<br>
-
-<ul>
-  <li>Introducción a los sistemas espaciales y los beneficios estratégicos del uso de tecnologías espaciales.</li>
-  <li>Fundamentos de ingeniería aplicados al diseño y desarrollo de CubeSats, incluyendo capacidades y casos de uso reales.</li>
-  <li>Gestión de proyectos para el ciclo completo de desarrollo de CubeSats.</li>
-  <li>Ingeniería de confiabilidad en sistemas satelitales.</li>
-  <li>Métodos de verificación, validación y pruebas aplicadas a sistemas espaciales.</li>
-  <li>Uso de CubeSats como herramientas para el desarrollo de capacidades académicas y tecnológicas sostenibles.</li>
-  <li>Fundamentos operativos y regulatorios en torno a la operación de satélites.</li>
-</ul>
-  
-Los contenidos que sustentan esta formación están organizados en torno a los siguientes ejes temáticos:
-
-<ul>
-  <li>Exploración espacial mediante tecnologías de pequeñas naves espaciales.</li>
-  <li>Arquitectura y operación de satélites tipo “Lean”, con foco en la interacción con el entorno espacial.</li>
-  <li>Diseño de micro, nano y pico satélites; autonomía, guiado y control.</li>
-  <li>Desarrollo de estaciones terrestres, estructuras desplegables y componentes eléctricos.</li>
-  <li>Ingeniería de sistemas aplicada a naves espaciales pequeñas.</li>
-  <li>Diseño, integración y operación de micro y nanosatélites.</li>
-  <li>Arquitecturas innovadoras, incluyendo propulsión, cultivo de órbitas y materiales funcionales.</li>
-  <li>Sostenibilidad de las actividades espaciales: monitoreo de desechos orbitales y conciencia situacional espacial.</li>
-</ul>
-
-Todo el contenido será presentado de manera clara, progresiva y comprensible, permitiendo que personas de diferentes disciplinas —no necesariamente
-especializadas en aeroespacial— puedan comprender los fundamentos del desarrollo de pequeños satélites 
-y aplicarlos a sus propios proyectos o iniciativas académicas.<br>
-
-<br>
-<center><div style="display:block;background:#2e86c1;border-radius:8px;padding:10px 40px;margin:10px;width:200px;cursor:pointer;">
-<a href="temario.html" style="text-decoration:none;color:white;"> Ir a los temas </a>
-</div></center>
-<br>
-  
-<hr>
-<left><h3>Colaboradores</h3></left>
-<ul>
-  <li><a href="#">Boyd Robert Mallqui</a> | Indexador</li>
-  <li><a href="#">Nicolas Prieto</a> | Diseños y esquematicos</li>
-  <li><a href="#">Alú Mauricio</a> | Telecomunicaciones</li>
-  <li><a href="#">Jose Luis Henriquez</a> | Estudiante de Ing. Electronica</li>
-  <li><a href="#">Sebastian Carreño</a> | Estudiante de Ing. Electronica </li>
-  <li><a href="#">Fabricio Albujar</a> | Dinamica de Cuerpos</li>
-</ul>
+        <article>
+            <header>
+                <h1>Crea tu propio <br>nano-Satelite</h1>
+            </header>
+            <p>Te enseñamos a como elaborarlo</p>
+            <p>Aprende las bases de la teoria y fisica Espacial, Electronica, diseño de Prototipos
+                y arquitectura de computadoras, aventurandote en este emocionante proyecto real.</p>
+            <button class="buttonPrincipal" aria-label="Iniciar curso de construcción de satélites">Construir
+                ahora</button>
+        </article>
 
 
+        <section class="presentacion">
 
-  
+            <div>
+                <h2>Construye a tu propio ritmo</h2>
+                <p>Sin problemas en un curso totalmente gratuito</p>
 
-  
+            </div>
+
+            <div>
+                <figure><img alt="Imagen Estandar" src="img/standard.png"></figure>
+                <p>Hemos traducido temas de física e ingeniería a un lenguaje sencillo.</p>
+            </div>
+
+            <div>
+                <figure><img alt="Imagen Estandar" src="img/standard.png"></figure>
+                <p>Creado con una línea de aprendizaje sencilla y comprensible.</p>
+            </div>
+
+            <div>
+                <figure><img alt="Imagen Estandar" src="img/standard.png"></figure>
+                <p>Documentación disponible en múltiples idiomas y lenguas originarias.</p>
+            </div>
+
+        </section>
+
+
+        <section class="main-section" id="mainSection">
+            <!-- Fondos móviles (ocultos en desktop) -->
+            <div class="mobile-background" id="mobileBg1">
+                <img alt="Imagen Estandar" src="img/scroll_01.png">
+            </div>
+            <div class="mobile-background" id="mobileBg2" style="opacity: 0;">
+                <img alt="Imagen Estandar" src="img/scroll_02.jpg">
+            </div>
+            <div class="mobile-background" id="mobileBg3" style="opacity: 0;">
+                <img alt="Imagen Estandar" src="img/scroll_03.jpg">
+            </div>
+            <div class="mobile-background" id="mobileBg4" style="opacity: 0;">
+                <img alt="Imagen Estandar" src="img/scroll_04.jpg">
+            </div>
+
+            <!-- Overlay para oscurecer en móvil -->
+            <div class="mobile-overlay"></div>
+
+            <!-- Container de imágenes para desktop -->
+            <div class="image-container">
+                <div class="scroll-wrapper" id="scrollWrapper">
+                    <figure><img alt="Imagen Estandar" src="img/scroll_01.png"></figure>
+                    <figure><img alt="Imagen Estandar" src="img/scroll_02.jpg"></figure>
+                    <figure><img alt="Imagen Estandar" src="img/scroll_03.jpg"></figure>
+                    <figure><img alt="Imagen Estandar" src="img/scroll_04.jpg"></figure>
+                </div>
+                <div class="scroll-controls" id="scrollControls">
+                    <div class="botonScroll active" data-slide="0"></div>
+                    <div class="botonScroll" data-slide="1"></div>
+                    <div class="botonScroll" data-slide="2"></div>
+                    <div class="botonScroll" data-slide="3"></div>
+                </div>
+            </div>
+
+            <!-- Container de texto -->
+            <div class="text-container">
+                <p>
+                    Este proyecto Satelital es la mejor herramienta para poder aprender sobre multiples disciplinas.
+                </p>
+
+                <p>
+                    Sabemos que adentrarse en el mundo espacial puede parecer complejo y costoso, pero este proyecto ha
+                    sido cuidadosamente diseñado para evitarlo.<br>
+                    Usamos componentes <b>económicos</b>, <b>fáciles de conseguir</b> y <b>ampliamente documentados</b>.
+                    Aquí, no necesitas
+                    grandes laboratorios ni inversiones altas: solo curiosidad, ganas de aprender y una guía que te
+                    acompañará paso a paso.
+                </p>
+
+                <p><a href="#">¿Cuanto cuesta desarrollar todo esto?</a></p>
+            </div>
+        </section>
+
+
+        <section class="main-opportunities">
+            <h2>Descubre las oportunidades</h2>
+
+            <section class="opportunity-item">
+                <div class="content-header">
+                    <figure><img alt="Imagen Estandar" src="img/standard.png"></figure>
+                    <h3>Aprende desde casa o el aula</h3>
+                </div>
+                <p>
+                    Diseñado para ser usado y comprendido por estudiantes y docentes, con medios que pueden ser
+                    integrados en multiples planificaciones pedagogicas.
+                </p>
+            </section>
+
+            <section class="opportunity-item">
+                <div class="content-header">
+                    <figure><img alt="Imagen Estandar" src="img/standard.png"></figure>
+                    <h3>Hecho con materiales económicos</h3>
+                </div>
+                <p>
+                    Elaborado con elementos de facil acceso y bajo costo para ser elaborado en cualquier institucion sin
+                    perjudicar su presupuesto
+                </p>
+            </section>
+
+            <section class="opportunity-item">
+                <div class="content-header">
+                    <figure><img alt="Imagen Estandar" src="img/standard.png"></figure>
+                    <h3>No necesitas experiencia previa</h3>
+                </div>
+                <p>
+                    Documentado completamente para no depender de bases de conocimiento amplias para empezar. Diseñado
+                    para enseñar y crear esa experiencia a traves de la practica.
+                </p>
+            </section>
+
+            <section class="opportunity-item">
+                <div class="content-header">
+                    <figure><img alt="Imagen Estandar" src="img/standard.png"></figure>
+                    <h3>Compatible con entornos educativos</h3>
+                </div>
+                <p>
+                    Dispone de muchos medios y elementos que pueden ser usados en clase para enseñar sobre puntos
+                    especificos de las multiples disciplinas del proyecto.
+                </p>
+            </section>
+
+            <button class="cta-button" aria-label="Iniciar curso de construcción de satélites">Construir ahora</button>
+        </section>
+
+
+        <section class="hero-banner">
+            <figure class="banner-image">
+                <img alt="Imagen Estandar" src="img/banner.png">
+            </figure>
+            <h3 class="banner-text">
+                El objetivo de este proyecto es formar una base sólida en conceptos espaciales y electrónicos,
+                culminando en la creación de un prototipo de satelite tipo CubeSat educativo. Una herramienta
+                pensada para enseñar haciendo y para inspirar nuevas generaciones de exploradores
+                tecnológicos.
+            </h3>
+        </section>
+
+
+
+        <section class="team-section" aria-labelledby="equipo-desarrolladores">
+            <h3 class="team-title">Desarrolladores</h3>
+            <div class="team-container">
+                <div class="team-member">
+                    <figure class="member-photo">
+                        <img alt="Boyd Robert Mallqui Rodriguez - Especialista en diseño y sistemas embebidos"
+                            src="img/standard.png">
+                    </figure>
+                    <h4 class="member-name">Boyd Robert <br>Mallqui Rodriguez</h4>
+                    <p class="member-role">Diseño, documentacion y Sistemas de Embebidos</p>
+                </div>
+
+                <div class="team-member">
+                    <figure class="member-photo">
+                        <img alt="Pablo Sebastian Gutierrez Vega - Programacion de los sistemas computacionales"
+                            src="img/standard.png">
+                    </figure>
+                    <h4 class="member-name">Pablo Sebastian <br>Gutierrez Vega</h4>
+                    <p class="member-role">Programacion de los sistemas computacionales</p>
+                </div>
+
+                <div class="team-member">
+                    <figure class="member-photo">
+                        <img alt="Carlos Nicolas Prieto Fretel - Especialista en desarrollo de placas de circuitos y modelado en 3d"
+                            src="img/standard.png">
+                    </figure>
+                    <h4 class="member-name">Carlos Nicolas<br> Prieto Fretel</h4>
+                    <p class="member-role">desarrollo de placas de circuitos y modelado en 3d</p>
+                </div>
+            </div>
+        </section>
+
+
+    </main>
+
+    <footer class="site-footer">
+    <div class="footer-brand">
+        <figure class="footer-logo">
+            <img alt="logo de lupinauta" src="img/standard.png">
+        </figure>
+        <h3 class="footer-title">Proyecto Mirqu</h3>
+        <h4 class="footer-description">Proyecto educativo desarrollado en Perú para la divulgación de tecnología espacial accesible.</h4>
+    </div>
+    <div class="footer-links">
+        <ul class="footer-nav">
+            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="#explora">Explora el proyecto</a></li>
+            <li><a href="#participa">Participa</a></li>
+            <li><a href="#reportar">Reportar algun problema</a></li>
+            <li><a href="#apoyar">Apoyar el proyecto</a></li>
+        </ul>
+        <ul class="footer-nav">
+            <li><a href="#faq">Preguntas frecuentes</a></li>
+            <li><a href="#terminos">Terminos y condiciones</a></li>
+            <li><a href="#politicas">Politicas sobre el uso del contenido</a></li>
+            <li><a href="#accesibilidad">Accesibilidad</a></li>
+            <li><a href="#contacto">Contactanos</a></li>
+        </ul>
+    </div>
+</footer>
+
 </body>
+
+<script src="scripts/scripts.js"></script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Course",
+  "name": "Construcción de Satélite Educativo",
+  "description": "Curso práctico gratuito para aprender a construir un satélite tipo CubeSat con materiales económicos",
+  "image": "https://tudominio.com/img/portada-curso.jpg",
+  "provider": {
+    "@type": "Organization",
+    "name": "Mirqu",
+    "url": "https://tudominio.com"
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "author": [
+  {
+    "@type": "Person",
+    "name": "Boyd Robert Mallqui Rodriguez",
+    "jobTitle": "CEO de Mirqui, Especialista en sistemas embebidos"
+  },
+    {
+    "@type": "Person",
+    "name": "Pablo Sebastian Gutierrez Vega",
+    "jobTitle": "Programacion de los sistemas computacionales"
+  },
+    {
+    "@type": "Person",
+    "name": "Carlos Nicolas Prieto Fretel",
+    "jobTitle": "Especialista en desarrollo de placas de circuitos y modelado en 3d"
+  }
+
+]
+}
+</script>
+
 </html>
